# mpf

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  create_figures.py  justfile  pyproject.toml
mpf/: auth.py  config.py  data.py  graph.py  theme.py
scripts/: create_figures.py
src/mpf/: auth.py  config.py  data.py
src/mpf/graph/: __init__.py  admin.py  brand.py  color.py  distance.py  size.py  type.py  utils.py
tests/: test_config.py  test_data.py
